# python-flake

./: fix-camoufox-bin.sh  flake.nix  pyproject.toml
src/camoufox_browser/: main.py
src/crawlee_framework/: camoufox_plugin.py  main.py  router.py  settings.py
src/crawlee_framework/storage/datasets/errors/: 000000001.json  __metadata__.json
src/crawlee_framework/storage/key_value_stores/default/: __metadata__.json
src/crawlee_framework/storage/request_queues/default/: RlCYlo2EFDU2Z8f.json  __metadata__.json  zbTYjcoL743v4T1.json
src/litestar_api/: main.py
